--- a/seminar.tex
+++ b/seminar.tex
@@ -36,9 +36,12 @@
 \setcounter{page}{2}
 %
 \tableofcontents
+% Einstellungen f\"{u}r Literaturverzeichnis
 \newpage
+\addcontentsline{toc}{section}{\listfigurename}
 \listoffigures
 \newpage
+\addcontentsline{toc}{section}{\listtablename}
 \listoftables
 \newpage
 \printnomenclature
