Usage of IEEEtran template

--- a/config/layout.tex
+++ b/config/layout.tex
@@ -30,14 +30,14 @@
 %
 % Page-Layout: A4 aus Header
 % Alternative
-%\setlength\headheight{14pt}
-%\setlength\topmargin{-15,4mm}
-%\setlength\oddsidemargin{-0,4mm}
-%\setlength\evensidemargin{-0,4mm}
-%\setlength\textwidth{160mm}
-%\setlength\textheight{252mm}
+\setlength\headheight{14pt}
+\setlength\topmargin{-15,4mm}
+\setlength\oddsidemargin{-0,4mm}
+\setlength\evensidemargin{-0,4mm}
+\setlength\textwidth{160mm}
+\setlength\textheight{252mm}
 %
-% Absatzeinstellungen
+%% Absatzeinstellungen
 \setlength\parindent{0mm}
 \setlength\parskip{2ex}
 
@@ -52,17 +52,17 @@
       \ifthenelse{\equal{\lang}{ngerman}}{%
         \centering
         Otto-Friedrich-Universit\"at Bamberg
-        \\[12pt]
-        {\Large Professur f\"ur Informatik,
-        \\
-        insbesondere Kommunikationsdienste, Telekommunikationsdienste und Rechnernetze}%
+        \\[12pt]%
+        {\Large Professur f\"ur Informatik\\[.5em]%
+        \large insbesondere Kommunikationsdienste,\\[.5em]%
+        Telekommunikationsdienste und Rechnernetze}%
         }{%
         \centering
         Otto-Friedrich-University of Bamberg
         \\[12pt]
-        {\Large Professorship for Computer Science,
-        \\
-        Communication Services, Telecommunication Systems and Computer Networks}%
+        {\Large Professorship for Computer Science,\\[.5em]%
+        \large Communication Services, Telecommunication\\[.5em]%
+        Systems and Computer Networks}%
         }
       \end{minipage}
       \hfill
