--- a/seminar.tex
+++ b/seminar.tex
@@ -16,7 +16,7 @@
 % Options ngerman, english
 \newcommand{\lang}{english}
 
-\documentclass[pdftex, a4paper, 12pt, \lang]{article}
+\documentclass[pdftex, journal, onecolumn, a4paper, 12pt, \lang]{IEEEtran}
 
 %===============================================================================
 % zentrale Layout-Angaben und Befehle
@@ -52,6 +52,8 @@
 \newpage
 \pagenumbering{arabic}
 \setcounter{page}{1}
+
+
 %
 % hier einzelne Kapitel mit \input{Kapitel-File} einf\"{u}gen
 %
