--- a/seminar.tex
+++ b/seminar.tex
@@ -14,7 +14,7 @@
 %===============================================================================
 
 % Options ngerman, english
-\newcommand{\lang}{english}
+\newcommand{\lang}{ngerman}
 
 \documentclass[pdftex, journal, onecolumn, a4paper, 12pt, \lang]{IEEEtran}
 
