--- a/config/metainfo.tex
+++ b/config/metainfo.tex
@@ -7,7 +7,7 @@
 \date{\today}
 
 % What is already done
-\newcommand{\semester}{\ifthenelse{\equal{\lang}{ngerman}}{Sommersemester 2013}{Summer Term 2013}}
+\newcommand{\semester}{\ifthenelse{\equal{\lang}{ngerman}}{Wintersemester 2013/14}{Winter Term 2013/14}}
 \title{\ifthenelse{\equal{\lang}{ngerman}}{Mobile Multimedia-Echtzeitdienste im\\[1em] Internet der n\"achsten Generation}{%
 Mobile Multimedia Real-Time Services\\[1em] in the Next Generation Internet
 }}
