--- a/config/metainfo.tex
+++ b/config/metainfo.tex
@@ -7,9 +7,9 @@
 \date{\today}
 
 % What is already done
-\newcommand{\semester}{\ifthenelse{\equal{\lang}{ngerman}}{Wintersemester 2013/14}{Winter Term 2013/14}}
-\title{\ifthenelse{\equal{\lang}{ngerman}}{Mobile Multimedia-Echtzeitdienste im\\[1em] Internet der n\"achsten Generation}{%
-Mobile Multimedia Real-Time Services\\[1em] in the Next Generation Internet
+\newcommand{\semester}{\ifthenelse{\equal{\lang}{ngerman}}{Sommersemester 2014}{Summer Term 2014}}
+\title{\ifthenelse{\equal{\lang}{ngerman}}{Moderne Videostreaming-Dienste in\\[.5em] informationszentrierten Netzen}{%
+Modern Video Streaming Services in\\[.5em] Information Centric Networks
 }}
 \newcommand{\supervisor}{Prof. Dr. Udo Krieger}
 %\institute[shortinstitute]{Institute}
