--- a/config/metainfo.tex
+++ b/config/metainfo.tex
@@ -7,9 +7,9 @@
 \date{\today}
 
 % What is already done
-\newcommand{\semester}{\ifthenelse{\equal{\lang}{ngerman}}{Sommersemester 2014}{Summer Term 2014}}
-\title{\ifthenelse{\equal{\lang}{ngerman}}{Moderne Videostreaming-Dienste in\\[.5em] informationszentrierten Netzen}{%
-Modern Video Streaming Services in\\[.5em] Information Centric Networks
+\newcommand{\semester}{\ifthenelse{\equal{\lang}{ngerman}}{Wintersemester 2014/15}{Winter Term 2014/15}}
+\title{\ifthenelse{\equal{\lang}{ngerman}}{Moderne Internet-Dienste in Software-definierten und\\ informationszentrierten Netzen der\\[.5em] n\"achsten Generation}{%
+Modern Internet Services in Software Defined and\\[.5em] Information Centric Networks of the next Generation
 }}
 \newcommand{\supervisor}{Prof. Dr. Udo Krieger}
 %\institute[shortinstitute]{Institute}
