--- a/config/layout.tex
+++ b/config/layout.tex
@@ -19,9 +19,72 @@
 \usepackage{amsfonts}
 %
 
+\usepackage{caption}
+
+%%   Fuer anspruchsvolle Tabellen   %%
+\usepackage{longtable, colortbl}
+\usepackage{multicol, multirow}
+
 \usepackage[pdftitle={\@title},pdfauthor={\@author},pdftex,bookmarksopen,bookmarksnumbered,pdfborder=0]{hyperref}
 \usepackage[pdftex]{graphicx}
+\usepackage{float}
+\usepackage{tikz}
+\usepackage{pgfplots}
+\usetikzlibrary{arrows,shapes,fit,positioning,snakes,backgrounds,shadows}
+
 \pdfcompresslevel=9
+
+% Code-Hervorhebung
+% Quellcode
+\usepackage{verbatim}            % Quellcode einbinden (\verbatiminput) standardpaket
+\usepackage{moreverb} 
+% PseudoCode
+\usepackage{algorithm}
+\usepackage{algpseudocode}
+%\usepackage{algorithmicx}
+\floatname{algorithm}{Algorithmus}
+\algrenewcommand{\algorithmiccomment}[1]{\hskip1em\textcolor{gray!60}{$\rhd$ #1}}
+\ifthenelse{\equal{\lang}{ngerman}}{%
+\renewcommand{\listalgorithmname}{Algorithmen}
+\def\algorithmautorefname{Algorithmus}
+}{%
+\renewcommand{\listalgorithmname}{List of Algorithms}
+\def\algorithmautorefname{Algorithm}
+}
+
+
+%%   intoc zur Aufnhame des Abkuerzungs- und Symbolverzeichnisses ins Inhaltsverzeichnis  
+\usepackage[intoc]{nomencl}
+\setlength{\nomlabelwidth}{.20\hsize}
+%\renewcommand{\nomlabel}[1]{#1 \dotfill}
+\setlength{\nomitemsep}{-\parsep}
+\makenomenclature
+\ifthenelse{\equal{\lang}{ngerman}}{%
+\renewcommand{\nomname}{Abk\"urzungsverzeichnis}
+%\newcommand{\nomaltname}{Symbolverzeichnis}
+}{%
+\renewcommand{\nomname}{List of Abbreviations}
+%\newcommand{\nomaltname}{List of Symbols}
+}%
+%\newcommand{\nomaltpreamble}{}
+%\newcommand{\nomaltpostamble}{}
+%\newcommand{\usetwonomenclatures}{\nomenclature[\switchnomitem]{}{}}
+%\newcommand{\switchnomitem}{R}
+%\renewcommand{\nomgroup}[1]{%
+%\ifthenelse{\equal{#1}{\switchnomitem}}{\switchnomalt}{}}
+%\newcommand{\switchnomalt}{%
+%\end{thenomenclature}
+%\newpage
+%\renewcommand{\nomname}{\nomaltname}
+%\renewcommand{\nompreamble}{\nomaltpreamble}
+%\renewcommand{\nompostamble}{\nomaltpostamble}
+%\begin{thenomenclature}
+%}
+
+
+%%   Hervorhebung der Abkuerzungsbuchstaben   %%
+\usepackage[normalem]{ulem}
+\newcommand{\m}[1]{\uline{#1}}
 
 %\usepackage[dvips]{rotating}
 %
@@ -134,3 +197,43 @@
 % zentrale Layout-Angaben und Befehle
 %===============================================================================
 %
+%#1 Breite
+%#2 Datei (liegt im image Verzeichnis)
+%#3 Beschriftung
+%#4 Label fuer Referenzierung
+\newcommand{\image}[4]{%
+\begin{figure}[H]%
+\centering%
+\includegraphics[width=#1]{image/#2}%
+\caption{#3}%
+\label{#4}%
+\end{figure}%
+}
+
+%#1 Datei (liegt im graphic Verzeichnis)
+%#2 Beschriftung
+%#3 Label fuer Referenzierung
+%#4 Skalierungsfaktor
+\newcommand{\scaletikzimage}[4]{%
+\begin{figure}[H]%
+\centering%
+\scalebox{#4}{%
+\input{graphic/#1.tikz}}%
+\caption{#2}%
+\label{#3}%
+\end{figure}
+}
+
+%#1 algorithm name
+%#2 algorithm label
+%#3 file name in code-folder
+\newcommand{\pseudo}[3]{%
+\small%
+\begin{algorithm}[H]%
+\caption{#1}%
+\label{#2}%
+\input{code/#3.tex}%
+\end{algorithm}%
+\normalsize%
+}
+
