--- a/seminar.tex
+++ b/seminar.tex
@@ -57,7 +57,7 @@
 %
 % hier einzelne Kapitel mit \input{Kapitel-File} einf\"{u}gen
 %
-\input{chapters/introduction}
+\input{chapters/exampleContent}
 %
 %===============================================================================
 % LATEX-Dokument: Literaturverzeichnis
