Updates for Latexmk

--- a/seminar.tex
+++ b/seminar.tex
@@ -1,14 +1,14 @@
 %===============================================================================
 % Zweck:    KTR-Seminar-Vorlage
 % Erstellt: 16.10.2007
-% Updated:  15.04.2013
+% Updated:  27.06.2016
 % Autor:    U.K. / M.G.
 %===============================================================================
 
 %===============================================================================
 % Zum Kompilieren pdflatex und bibtex ausführen.
-%	Konfiguration: in texmaker unter Benutzer -> Benutzerbefehle einen neuen Befehl anlegen: pdflatex -synctex=1 -interaction=nonstopmode %.tex | bibtex % | makeindex %.nlo -s nomencl.ist -o %.nls | pdflatex -synctex=1 -interaction=nonstopmode %.tex | pdflatex -synctex=1 -interaction=nonstopmode %.tex
-%	Entsprechende Informationen in den config/metainfo verändern
+% Konfiguration in texmaker: Options -> Configure Texmaker -> Quick Build -> Select Latexmk + ViewPDF
+% Entsprechende Informationen in den config/metainfo verändern
 % Zur Auswahl der Sprache im folgenden Befehl
 % ngerman für deutsch eintragen, english für Englisch.
 %===============================================================================
