With Git Versioning

--- a/config/commands.tex
+++ b/config/commands.tex
@@ -12,6 +12,9 @@
 \usepackage[utf8]{inputenc}
 \usepackage{fancyhdr}
 \usepackage[T1]{fontenc}
+\ifgit
+  \usepackage[mark]{gitinfo2}
+\fi
 \usepackage{ae}
 \usepackage{color}
 \usepackage{amsmath}
