With Git Tagging

--- a/config/metainfo.tex
+++ b/config/metainfo.tex
@@ -23,5 +23,5 @@
 \gittrue
 
 \ifgit
-  \newcommand{\keywords}{\gitAbbrevHash, \gitAuthorIsoDate, \gitAuthorName }
+  \newcommand{\gitkeys}{\gitAbbrevHash, \gitAuthorIsoDate, \gitAuthorName }
 \fi
