Seminar Summer Term 16

--- a/config/metainfo.tex
+++ b/config/metainfo.tex
@@ -9,12 +9,12 @@
 % What is already done
 
 \newlanguagecommand{\semester}
-\addtolanguagecommand{\semester}{english}{Winter Term 2016/17}
-\addtolanguagecommand{\semester}{ngerman}{Wintersemester 2016/17}
+\addtolanguagecommand{\semester}{english}{Summer Term 2016}
+\addtolanguagecommand{\semester}{ngerman}{Sommersemester 2016}
 
 \newlanguagecommand{\ltitle}
-\addtolanguagecommand{\ltitle}{english}{Modern Internet Services in Software Defined and\\[.5em] Information Centric Networks of the next Generation}
-\addtolanguagecommand{\ltitle}{ngerman}{Moderne Internet-Dienste in Software-definierten und\\ informationszentrierten Netzen der\\[.5em] n\"achsten Generation}
+\addtolanguagecommand{\ltitle}{english}{Fog Computing in Software-Defined Networks}
+\addtolanguagecommand{\ltitle}{ngerman}{Fog Computing in Software-Defined Networks}
 
 \title{\ltitle}
 \newcommand{\supervisor}{Prof. Dr. Udo Krieger}
