Towards outsourcing MetaInfo

--- a/seminar.tex
+++ b/seminar.tex
@@ -8,12 +8,14 @@
 %===============================================================================
 % zentrale Layout-Angaben und Befehle
 %===============================================================================
-\input{config/commands}
+\newcommand\meta{meta}
+
+\input{\meta/config/commands}
 
 %===============================================================================
 % LATEX-Dokument
 %===============================================================================
-\input{config/hyphenation}
+\input{\meta/config/hyphenation}
 \begin{document}
   %===============================================================================
   % Zum Kompilieren pdflatex und bibtex ausführen.
@@ -50,12 +52,12 @@
 % to use git tagging
 %
 \ifgit
-  \input{chapters/version}
+  \input{\meta/exampleContent/version}
 \fi
 %
 % hier einzelne Kapitel mit \input{Kapitel-File} einf\"{u}gen
 %
-\input{chapters/exampleContent}
+\input{\meta/exampleContent/exampleContent}
 %
 %===============================================================================
 % LATEX-Dokument: Literaturverzeichnis
@@ -68,7 +70,7 @@
 
 \bibliographystyle{IEEEtran}
 % argument is your BibTeX string definitions and bibliography database(s)
-\bibliography{literature/bib}
+\bibliography{\meta/exampleLiterature/bib}
 % Nutzung von Bibtex:
 % hier den bib-file einbinden
 %
