With Meta Files

--- a/config/metainfo.tex
+++ b/config/metainfo.tex
@@ -20,7 +20,4 @@
 \newcommand{\supervisor}{Prof. Dr. Udo Krieger}
 
 \gittrue
-
-\ifgit
-  \newcommand{\gitkeys}{\gitAbbrevHash, \gitAuthorIsoDate, \gitAuthorName }
-\fi
+\seminartrue
