Updates on MakeFile

--- a/seminar.tex
+++ b/seminar.tex
@@ -8,7 +8,7 @@
 %===============================================================================
 % zentrale Layout-Angaben und Befehle
 %===============================================================================
-\newcommand\meta{meta}
+\newcommand\meta{./meta}
 
 \input{\meta/config/commands}
 
