--- a/config/metainfo.tex
+++ b/config/metainfo.tex
@@ -9,8 +9,8 @@
 % What is already done
 
 \newlanguagecommand{\semester}
-\addtolanguagecommand{\semester}{english}{Summer Term 2016}
-\addtolanguagecommand{\semester}{ngerman}{Sommersemester 2016}
+\addtolanguagecommand{\semester}{english}{Winter Term 2016/17}
+\addtolanguagecommand{\semester}{ngerman}{Wintersemester 2016/17}
 
 \newlanguagecommand{\ltitle}
 \addtolanguagecommand{\ltitle}{english}{Fog Computing in Software-Defined Networks}
