--- a/config/metainfo.tex
+++ b/config/metainfo.tex
@@ -13,8 +13,8 @@
 \addtolanguagecommand{\semester}{ngerman}{Wintersemester 2016/17}
 
 \newlanguagecommand{\ltitle}
-\addtolanguagecommand{\ltitle}{english}{Fog Computing in Software-Defined Networks}
-\addtolanguagecommand{\ltitle}{ngerman}{Fog Computing in Software-Defined Networks}
+\addtolanguagecommand{\ltitle}{english}{Content-Centric Software-Defined Networking (SDN) and Mobile Edge Computing}
+\addtolanguagecommand{\ltitle}{ngerman}{Content-Centric Software-Defined Networking (SDN) and Mobile Edge Computing}
 
 \title{\ltitle}
 \newcommand{\supervisor}{Prof. Dr. Udo Krieger}
