--- a/seminar.tex
+++ b/seminar.tex
@@ -24,7 +24,7 @@
   % Zur Auswahl der Sprache im folgenden Befehl
   % ngerman für deutsch eintragen, english für Englisch.
   %===============================================================================
-\selectlanguage{ngerman}
+\selectlanguage{english}
 
 \maketitle
 
