--- a/config/metainfo.tex
+++ b/config/metainfo.tex
@@ -9,12 +9,12 @@
 % What is already done
 
 \newlanguagecommand{\semester}
-\addtolanguagecommand{\semester}{english}{Winter Term 2016/17}
-\addtolanguagecommand{\semester}{ngerman}{Wintersemester 2016/17}
+\addtolanguagecommand{\semester}{english}{Summer Term 2017}
+\addtolanguagecommand{\semester}{ngerman}{Sommersemester 2017}
 
 \newlanguagecommand{\ltitle}
-\addtolanguagecommand{\ltitle}{english}{Content-Centric Software-Defined Networking (SDN) and Mobile Edge Computing}
-\addtolanguagecommand{\ltitle}{ngerman}{Content-Centric Software-Defined Networking (SDN) and Mobile Edge Computing}
+\addtolanguagecommand{\ltitle}{english}{Fog Computing for Internet-of-Things Applications}
+\addtolanguagecommand{\ltitle}{ngerman}{Fog Computing for Internet-of-Things Applications}
 
 \title{\ltitle}
 \newcommand{\supervisor}{Prof. Dr. Udo Krieger}
