Breaking long urls

--- a/seminar.tex
+++ b/seminar.tex
@@ -4,6 +4,7 @@
 % Updated:  27.06.2016
 % Autor:    U.K. / M.G.
 %===============================================================================
+\RequirePackage[hyphens]{url}
 \documentclass[pdftex, journal, onecolumn, a4paper, 12pt]{IEEEtran}
 %===============================================================================
 % zentrale Layout-Angaben und Befehle
