--- a/seminar.tex
+++ b/seminar.tex
@@ -5,7 +5,7 @@
 % Autor:    U.K. / M.G.
 %===============================================================================
 \RequirePackage[hyphens]{url}
-\documentclass[pdftex, journal, onecolumn, a4paper, 12pt]{IEEEtran}
+\documentclass[journal, onecolumn, a4paper, 12pt]{IEEEtran}
 %===============================================================================
 % zentrale Layout-Angaben und Befehle
 %===============================================================================
