--- a/config/metainfo.tex
+++ b/config/metainfo.tex
@@ -9,12 +9,12 @@
 % What is already done
 
 \newlanguagecommand{\semester}
-\addtolanguagecommand{\semester}{english}{Summer Term 2017}
-\addtolanguagecommand{\semester}{ngerman}{Sommersemester 2017}
+\addtolanguagecommand{\semester}{english}{Summer Term 2020}
+\addtolanguagecommand{\semester}{ngerman}{Sommersemester 2020}
 
 \newlanguagecommand{\ltitle}
-\addtolanguagecommand{\ltitle}{english}{Fog Computing for Internet-of-Things Applications}
-\addtolanguagecommand{\ltitle}{ngerman}{Fog Computing for Internet-of-Things Applications}
+\addtolanguagecommand{\ltitle}{english}{Fog Computing in Next Generation Networks}
+\addtolanguagecommand{\ltitle}{ngerman}{Fog Computing in Next Generation Networks}
 
 \title{\ltitle}
 \newcommand{\supervisor}{Prof. Dr. Udo Krieger}
