--- a/seminar.tex
+++ b/seminar.tex
@@ -23,7 +23,7 @@
   % Konfiguration in texmaker: Options -> Configure Texmaker -> Quick Build -> Select Latexmk + ViewPDF
   % Entsprechende Informationen in den config/metainfo verändern
   % Zur Auswahl der Sprache im folgenden Befehl
-  % ngerman für deutsch eintragen, english für Englisch.
+  % ngerman für deutsch eintragen, english für Englisch.git@github.com:uniba-ktr/SemiTeX.git
   %===============================================================================
 \selectlanguage{english}
 
