Updated Seminar with Declaration

--- a/config/metainfo.tex
+++ b/config/metainfo.tex
@@ -9,8 +9,8 @@
 % What is already done
 
 \newlanguagecommand{\semester}
-\addtolanguagecommand{\semester}{english}{Summer Term 2020}
-\addtolanguagecommand{\semester}{ngerman}{Sommersemester 2020}
+\addtolanguagecommand{\semester}{english}{Winter Term 2021/22}
+\addtolanguagecommand{\semester}{ngerman}{Wintersemester 2021/22}
 
 \newlanguagecommand{\ltitle}
 \addtolanguagecommand{\ltitle}{english}{Fog Computing in Next Generation Networks}
