--- a/seminar.tex
+++ b/seminar.tex
@@ -83,5 +83,5 @@
 %===============================================================================
 % LATEX-Dokument: Literaturverzeichnis
 %===============================================================================
-%
+\erklaerung
 \end{document}
