--- a/config/metainfo.tex
+++ b/config/metainfo.tex
@@ -13,8 +13,8 @@
 \addtolanguagecommand{\semester}{ngerman}{Wintersemester 2021/22}
 
 \newlanguagecommand{\ltitle}
-\addtolanguagecommand{\ltitle}{english}{Fog Computing in Next Generation Networks}
-\addtolanguagecommand{\ltitle}{ngerman}{Fog Computing in Next Generation Networks}
+\addtolanguagecommand{\ltitle}{english}{Fog Computing and Machine Learning}
+\addtolanguagecommand{\ltitle}{ngerman}{Fog Computing und Machine Learning}
 
 \title{\ltitle}
 \newcommand{\supervisor}{Prof. Dr. Udo Krieger}
