Added glossaries for acronyms

--- a/seminar.tex
+++ b/seminar.tex
@@ -41,7 +41,12 @@
 \addcontentsline{toc}{section}{\listtablename}
 \listoftables
 \newpage
-\printnomenclature
+% Glossar und Akronymverzeichnis, ungenutzte Verzeichnisse bitte auskommentieren
+\printglossary[type=\acronymtype]  % list of acronyms
+\newpage
+\printglossary[type=symbolslist]   % list of symbols
+\newpage
+\printglossary[type=main]     
 %===============================================================================
 % LATEX-Dokument: Kapitel laden
 %===============================================================================
