Updates for summer term 23

--- a/config/metainfo.tex
+++ b/config/metainfo.tex
@@ -9,12 +9,12 @@
 % What is already done
 
 \newlanguagecommand{\semester}
-\addtolanguagecommand{\semester}{english}{Winter Term 2021/22}
-\addtolanguagecommand{\semester}{ngerman}{Wintersemester 2021/22}
+\addtolanguagecommand{\semester}{english}{Summer Term 23}
+\addtolanguagecommand{\semester}{ngerman}{Sommersemester 2023}
 
 \newlanguagecommand{\ltitle}
-\addtolanguagecommand{\ltitle}{english}{Fog Computing and Machine Learning}
-\addtolanguagecommand{\ltitle}{ngerman}{Fog Computing und Machine Learning}
+\addtolanguagecommand{\ltitle}{english}{Fog and Mobile Edge Computing}
+\addtolanguagecommand{\ltitle}{ngerman}{Fog and Mobile Edge Computing}
 
 \title{\ltitle}
 \newcommand{\supervisor}{Prof. Dr. Udo Krieger}
